# Redmine-updated

./: Dockerfile  Dockerfile.Test  DockerfileTesting  README.md  TESTS.py  adding_docker.py  adding_pydantic.py  auth_post  data_testing.json  docker-compose-app.yml  docker-compose.yml  dockerfile  gotowe_do_realizacji.txt  graph.txt  new_testing.py  project_with_progress.py  py.typed  pyproject.toml  requirements.txt  test.py  testing.py  testing_new_class.py  testing_variant.py
src/app/: app.py
src/redmine_management/app/: __init__.py  app.py
src/redmine_management/tests/: testing.py
src/tests/: testing.py
