[tool.poetry]
name = "redmine-management"
version = "1.0.0"
description = "Package to manage your Redmine"
authors = ["Wiktor Gladys <wiktor_gladys@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/WiktorGladys/Redmine-updated"
keywords = ["redmine", "rocketchat", "management"]

[tool.poetry.dependencies]
python = "^3.8"
annotated-types = "0.6.0"
astroid = "3.0.1"
asttokens = "2.4.1"
attrs = "23.1.0"
bcrypt = "4.0.1"
black = "23.11.0"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
dill = "0.3.7"
docker = "6.1.3"
dockerpty = "0.4.1"
docopt = "0.6.2"
exceptiongroup = "1.1.3"
executing = "2.0.1"
icecream = "2.1.3"
iniconfig = "2.0.0"
isort = "5.12.0"
jsonschema = "3.2.0"
mccabe = "0.7.0"
mypy = "1.7.0"
mypy-extensions = "1.0.0"
packaging = "23.2"
paramiko = "3.3.1"
pathspec = "0.11.2"
platformdirs = "4.0.0"
pluggy = "1.3.0"
pycparser = "2.21"
pydantic = "2.5.1"
pydantic-core = "2.14.3"
pylint = "3.0.2"
pyrsistent = "0.20.0"
pytest = "7.4.3"
python-dotenv = "0.21.1"
python-redmine = "2.4.0"
requests = "2.31.0"
rocketchat-API = "1.31.0"
texttable = "1.7.0"
tomli = "2.0.1"
tomlkit = "0.12.3"
typing-extensions = "4.8.0"
websocket-client = "0.59.0"
pendulum = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
